--- a/app/views/avaliadores/mypassword.html.erb
+++ b/app/views/avaliadores/mypassword.html.erb
@@ -1,5 +1,5 @@
 <FIELDSET>
-    <LEGEND><H1><label><%= t('avaliadores.mypassword.edit') %></label></H1></LEGEND>
+    <LEGEND><H1><STRONG><label><%= t('avaliadores.mypassword.edit') %></label></H1></LEGEND></STRONG>
 <DIV id="localization">
 
 <%= form_for(@avaliador, :url=>{:action=>'updatepassword'}) do |f| %>
@@ -9,21 +9,21 @@
         </div>
     <% end %>
 
-    <div class="field">
-        <%= f.label :password %><br />
-        <i id="blue" class="small"><%= t('avaliadores.profileimage.readmecarefully') %></i><BR />
+    <div class="control-group">
+        <%= f.label :password %>
+        <i id="blue"><%= t('avaliadores.profileimage.readmecarefully') %></i><BR />
         <%= f.password_field :password %>
         <%= error_tag @avaliador, :password %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
+    <div class="control-group">
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation %>
       <%= error_tag @avaliador, :password_confirmation %>
     </div>
 
-    <div class="field">
-      <%= f.label :current_password %><br />
+    <div class="control-group">
+      <%= f.label :current_password %>
       <%= f.password_field :current_password %>
       <%= error_tag @avaliador, :current_password %>
     </div>
@@ -31,11 +31,11 @@
     <br>
     <br></FIELDSET>
     <div class="botao_left">
-        <span class="luz"><%= f.submit t('avaliadores.profileimage.send'), :class=>"botaoVerde", :id=>'id_botao' %></span>
+      <%= f.submit t('avaliadores.profileimage.send'), :class=>"btn btn-success btn-large", :id=>'id_botao' %>
     </div>
     
     <div class="botao_left">
-      <%= link_to t('links.back'), avaliadores_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
+      <%= link_to t('links.back'), avaliadores_index_path, :class=>"btn btn-success btn-large", :id=>'id_botao' %>
     </div>
 <%- end -%>
 
