^^ MELHORAMENTO DO LIVE SEARCH EM AVALIADOR -- VIEWMODEL ^^

--- a/app/views/avaliadores/buscar_index.html.erb
+++ b/app/views/avaliadores/buscar_index.html.erb
@@ -5,7 +5,7 @@
  <th>Atividades</th>
  </tr>
  
-<% for busca_aluno in @alunos %>
+<% for busca_aluno in @tasks %>
 	<tr>
 	 <td><%=h busca_aluno.nome %></td>
 	 <td><%=h busca_aluno.email %></td>
