--- a/app/views/layouts/_current_user.html.erb
+++ b/app/views/layouts/_current_user.html.erb
@@ -64,8 +64,8 @@
     <li><span>
       <DIV>
         <SPAN style="text-align:right">
-          <form class="navbar-search pull-left" id="live-search-form" method="get" action="<%= busca_index_alunos_path %>">
-            <input type="text" class="search-query" placeholder="Buscar Alunos" id="big-search-box" name="q" />
+          <form class="navbar-search pull-left" id="live-search-form" method="get" action="<%= live_search_alunos_path %>">
+            <input type="text" class="search-query" placeholder="Buscar Alunos" id="big-search-box" name="live_search" />
           </form>
         </SPAN>
         <div id="live-search-results"></div>
