--- a/app/views/atividades/comprovante_file.html.erb
+++ b/app/views/atividades/comprovante_file.html.erb
@@ -2,40 +2,33 @@
  <%= @aluno = current_aluno  %>
 </div>
 
-<strong>
-  <p>
-    <font size="5" color="red">*</font>
-    <label>
-      &nbsp <%= t('form_messages.requiredfields')%>
-    </label>
-  </p>
-</strong>
 <% if @atividade.errors.any? %>
   <div id="error_explanation">
     <%= t 'general.form_error' %>
   </div>
 <% end %>
+
 <FIELDSET>
    <LEGEND>
-      <label><%= t 'atividades.new.title'%></label>
+      <STRONG><label><%= t '.title', name: @atividade.title %></label></STRONG>
     </LEGEND>
   <%= form_for(@atividade) do |f| %>
     
-    <div class="session">
+    <div class="control-group">
           <%= f.hidden_field :aluno_id, :readonly => "true", :value => @aluno.id %>
     </div>
 
-    <%= f.label :comprovante %>
-    <div class="session">
-      <%= f.file_field :comprovante %><br ><br >
+    <div class="control-group">
+      <%= f.label :comprovante %>
+      <%= f.file_field :comprovante %><br /><br />
     </div>    
 </FIELDSET>
-
+<br /><br />
 <div class="botao_left">
-    <%= f.submit "Enviar", :class=>"botaoVerde", :id=>'id_botao' %>
+    <%= f.submit t('links.send'), :class=>"btn btn-success btn-large", :id=>'id_botao' %>
 </div>
 
 <div class="botao_left">
-    <%= link_to t('links.back'), aluno_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
+    <%= link_to t('links.back'), aluno_index_path, :class=>"btn btn-success btn-large", :id=>'id_botao' %>
 </div>
 <% end %>
