--- a/app/views/atividades/_form.html.erb
+++ b/app/views/atividades/_form.html.erb
@@ -79,6 +79,7 @@
     <div class="control-group">
       <%= f.label :comprovante %>
       <%= f.file_field :comprovante %>
+      <%= error_tag @atividade, :comprovante %>
     </div>
 </FIELDSET>
 <BR /><BR /><BR />
