Change route password  symbol by alter_password_information

--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -18,7 +18,7 @@
                 <%= link_to t('.RemoveProfileImage'), default_image_path(current_aluno.id) %>
               </li>
               <li>
-                <%= link_to t('.changepassword'), password_path(current_aluno.id) %>
+                <%= link_to t('.changepassword'), alter_password_information_path(current_aluno.id) %>
               </li>
             </ul> 
           </li>
